# RabbitMq-Python

./: .gitignore  README.md  pyproject.toml
src/: example_use.py  queue.py
